# jamb

./: .gitignore  .gitmodules  Cargo.toml  LICENSE-APACHE  LICENSE.md  Makefile  README.md  config.default.json  main.py  requirements.txt
commands/: __init__.py
commands/admin/: __init__.py
commands/general/: __init__.py  help.py
commands/music/: __init__.py  music_loop.py  queue.py
src/: args.rs  config.rs  jamb.c  main.rs  serenity_init.rs
src/commands/admin/: logout.rs  mod.rs  register_commands.rs
src/commands/general/: eight_ball.rs  help.rs  mod.rs  ping.rs
src/commands/music/: mod.rs  play.rs  queue.rs  types.rs
src/utils/: bot_info.rs  mod.rs  xoshiro256.rs
utils/: __init__.py  bot_config.py  ffmpeg.py  logger.py  path_stuff.py  phantomjs.py  to_thread.py  yt_vid.py
