[package]
name = "jamb"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.20", features = ["derive"] }
fern = { version = "0.7.0", features = ["chrono", "colored"] }
log = "0.4.22"
poise = "0.6.1"
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["tokio-macros", "rt-multi-thread"] }
